  ThreadGroup.  Some tools organize threads by ThreadGroup which makes it
  easier to work with servers with lots of threads.  The ThreadGroup is named
  using:

    String.format(nameFormat, "group")

  This means the nameFormat must expect a String argument instead of an int.
  To ease migration, the code adapts formats with a single %d, but this may
  be removed in a future release.

* Library Upgrades
  - Guice to 4.0

Platform 1.19

* Java 8 is now required

* JSON

  We added JSON serialization support for the JDK 8 Optional and JSR 310
  date/time classes.

* Library Upgrades
  - Jackson to 2.4.4

* Maven plugin upgrades
  - findbugs-maven-plugin to 3.0.1
  - maven-dependency-plugin to 2.10

Platform 1.18

* Bootstrap

  We added a new @AcceptRequests annotation for methods that start accepting
  requests into the application. The methods will be invoked after all
  @PostConstruct methods have been invoked. Upon shutdown, any @PreDestroy
  methods in the class will be invoked before those in non-@AcceptRequests
  classes.

* HttpServer

  We changed HttpServer.start() to be an @AcceptRequests method in order to
  ensure all dependencies are initialized before accepting client requests.

  This adds a dependency from HttpServerModule to Bootstrap, which might break
  unit tests that use HttpServerModule without Bootstrap. Such unit tests
  should be modified to use Bootstrap--see the sample server's TestServer.

* Reporting

  We now report upon startup a ReportCollector.ServerStart metric with a value
  of 1. This may be used to track server restarts.

* Library Upgrades

  - Jersey to 2.17
  - logback to 1.1.3

Platform 1.17

* Maven 3.2.3 required

  We increased the minimum version of Maven to 3.2.3.

* Deprecated APIs removed

  - AsyncHttpClient
  - BalancingAsyncHttpClient

* Deprecations

  - HttpClientAsyncBindingBuilder has been deprecated. Use
    HttpClientBindingBuilder instead.