@@ -1,0 +1,50 @@
+/*
+ * Copyright 2015 Proofpoint, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package com.proofpoint.jmx;
+
+import com.proofpoint.configuration.Config;
+import com.proofpoint.configuration.ConfigSecuritySensitive;
+
+public class AdminServerConfig
+{
+    private String username = "admin";
+    private String password;
+
+    public String getUsername()
+    {
+        return username;
+    }
+
+    @Config("admin-server.username")
+    public AdminServerConfig setUsername(String username)
+    {
+        this.username = username;
+        return this;
+    }
+
+    public String getPassword()
+    {
+        return password;
+    }
+
+    @Config("admin-server.password")
+    @ConfigSecuritySensitive
+    public AdminServerConfig setPassword(String password)
+    {
+        this.password = password;
+        return this;
+    }
+}
